--- a/package.json
+++ b/package.json
@@ -83,7 +83,7 @@
     "loader-utils": "^1.2.3",
     "ng-packagr": "^5.2.0",
     "puppeteer": "^1.15.0",
-    "quill": "^1.3.6",
+    "quill": "2.0.0-dev.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^6.5.2",
     "source-map-loader": "^0.2.4",
