--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "@angular/common": "^5.0.0 || ^6.0.0 || ^7.0.0 || ^8.0.0",
     "@angular/core": "^5.0.0 || ^6.0.0 || ^7.0.0 || ^8.0.0",
     "@angular/forms": "^5.0.0 || ^6.0.0 || ^7.0.0 || ^8.0.0",
-    "quill": "^1.3.6",
+    "quill": "2.0.0-dev.3",
     "rxjs": "^5.5.2 || ^6.1.0 || ^6.3.0 || ^6.4.0 || ^6.5.0"
   },
   "devDependencies": {
